# divprom-mobile

./: .gitignore  android_print_service.py  api_client.py  bluetooth_escpos_service.py  bluetooth_print_service.py  build_apk.bat  build_apk.py  build_release.py  crr_form_screen.py  crr_list_screen.py  crr_search_screen.py  home_screen.py  image_picker_service.py  local_db.py  login_screen.py  main.py  print_dialog.py  print_utils.py  pyproject.toml  requirements.txt  senha_screen.py
